...
  all_text_except_clickable: "All text except clickable",
  sensitive_fields_only: "Sensitive fields only",
};

const logSeverityLabels: Record<number, string> = {
  8: "Debug",
  12: "Info",
  16: "Warning",
  20: "Error",
  24: "Fatal",
};

export const maskLevelToDisplay = (maskLevel: string): string =>
...
