appId: ${APP_ID}
---
- launchApp
- extendedWaitUntil:
    visible: "Native Android"
    timeout: 10000
- tapOn: "Native Android"

- scrollUntilVisible:
    element:
      text: "Set User ID"
- tapOn: "Set User ID"

- scrollUntilVisible:
    direction: UP
    element:
      text: ".*Track Logs.*"
- tapOn: ".*Track Logs.*"
- runFlow:
    file: ../send_logs.yaml
- tapOn: "Info"
- tapOn: "Track Logcat Log"
- back

- scrollUntilVisible:
    direction: UP
    element:
      text: "Compose Navigation"
- tapOn: "Compose Navigation"
- tapOn: "Checkout"
- back
- back

- scrollUntilVisible:
    element:
      text: "HTTP Client"
- tapOn: "HTTP Client"
- tapOn: "GET"
- tapOn: "Random path"
- tapOn: "Send"
- back

- scrollUntilVisible:
    element:
      text: "HTTP Client"
- tapOn: "HTTP Client"
- setAirplaneMode: enabled
- tapOn: "Send"
- setAirplaneMode: disabled
- back

- scrollUntilVisible:
    element:
      text: "Create Span"
- tapOn: "Create Span"

- scrollUntilVisible:
    element:
      text: "Track Custom Event"
- tapOn: "Track Custom Event"

- scrollUntilVisible:
    element:
      text: "Track Handled Exception"
- tapOn: "Track Handled Exception"

- back

- extendedWaitUntil:
    visible: "React Native"
    timeout: 10000
- tapOn: "React Native"
- scrollUntilVisible:
    element:
      text: ".*Track Logs.*"
- tapOn: ".*Track Logs.*"
- runFlow:
    file: ../send_logs.yaml
- tapOn: "Info"
- tapOn: "Track Console Log"
- tapOn: "Back"
- back

- extendedWaitUntil:
    visible: "Flutter"
    timeout: 10000
- tapOn: "Flutter"
- scrollUntilVisible:
    element:
      text: ".*Track Logs.*"
- tapOn: ".*Track Logs.*"
- runFlow:
    file: ../send_logs.yaml
- back
- back

- extendedWaitUntil:
    visible: "Compose Multiplatform"
    timeout: 10000
- tapOn: "Compose Multiplatform"
- scrollUntilVisible:
    element:
      text: ".*Track Logs.*"
    centerElement: true
- tapOn: ".*Track Logs.*"
- runFlow:
    file: ../send_logs.yaml
- tapOn: "Back"
- tapOn: "Back"

- pressKey: Home
- launchApp:
    stopApp: false
- extendedWaitUntil:
    visible: "Native Android"
    timeout: 5000
